# semillero_tool

./: .gitignore  README  semillero_tool
semillero_tool2/: pyproject.toml  readme
semillero_tool2/src/semillero_tool/: __main__.py  cli.py  columns.py  config.py  dates.py  drop.py  errors.py  fu.py  io_excel.py  pipeline.py  programa.py  text_clean.py
semillero_tool2/src/semillero_tool2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
semillero_tool2/tests/: test_ids.py  test_programa.py
