[project]
name = "semillero_tool2"
version = "0.3.0"
description = "Limpieza y normalización de datos psicométricos (Semillero)."
requires-python = ">=3.10"
dependencies = ["pandas", "openpyxl", "unidecode"]

[project.scripts]
semillero_tool = "semillero_tool.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
